docs/envoy/v1.6.0/_sources/api-v2/config/filter/network/tcp_proxy/v2/tcp_proxy.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/network/tcp_proxy/v2/tcp_proxy.proto:

TCP Proxy
=========

TCP Proxy :ref:`configuration overview <config_network_filters_tcp_proxy>`.

.. _envoy_api_msg_config.filter.network.tcp_proxy.v2.TcpProxy:

config.filter.network.tcp_proxy.v2.TcpProxy
-------------------------------------------

`[config.filter.network.tcp_proxy.v2.TcpProxy proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/network/tcp_proxy/v2/tcp_proxy.proto#L18>`_


.. code-block:: json

  {
    "stat_prefix": "...",
    "cluster": "...",
    "metadata_match": "{...}",
    "idle_timeout": "{...}",
    "access_log": [],
    "deprecated_v1": "{...}",
    "max_connect_attempts": "{...}"
  }

.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The prefix to use when emitting :ref:`statistics
  <config_network_filters_tcp_proxy_stats>`.
  
  
.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.cluster:

cluster
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The upstream cluster to connect to.
  
  .. note::
  
   Once full filter chain matching is implemented in listeners, this field will become the only
   way to configure the target cluster. All other matching will be done via :ref:`filter chain
   matching rules <envoy_api_msg_listener.FilterChainMatch>`. For very simple configurations,
   this field can still be used to select the cluster when no other matching rules are required.
   Otherwise, a :ref:`deprecated_v1
   <envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.deprecated_v1>` configuration is
   required to use more complex routing in the interim.
  
  
  
.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.metadata_match:

metadata_match
  (:ref:`core.Metadata <envoy_api_msg_core.Metadata>`) Optional endpoint metadata match criteria. Only endpoints in the upstream
  cluster with metadata matching that set in metadata_match will be
  considered. The filter name should be specified as *envoy.lb*.
  
  
.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.idle_timeout:

idle_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The idle timeout for connections managed by the TCP proxy filter. The idle timeout
  is defined as the period in which there are no bytes sent or received on either
  the upstream or downstream connection. If not set, connections will never be closed
  by the TCP proxy due to being idle.
  
  


.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.access_log:

access_log
  (:ref:`config.filter.accesslog.v2.AccessLog <envoy_api_msg_config.filter.accesslog.v2.AccessLog>`) Configuration for :ref:`access logs <arch_overview_access_logs>`
  emitted by the this tcp_proxy.
  
  
.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.deprecated_v1:

deprecated_v1
  (:ref:`config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1 <envoy_api_msg_config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1>`) TCP Proxy filter configuration using deprecated V1 format. This is required for complex
  routing until filter chain matching in the listener is implemented.
  
  .. attention::
  
    Using this field will lead to `problems loading the configuration
    <https://github.com/envoyproxy/envoy/issues/2441>`_. If you
    want to configure the filter using v1 config structure, please make this
    field a boolean with value ``true`` and configure via the opaque ``value`` field
    like is suggested in the filter `README
    <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/README.md>`_.
  
  
.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.max_connect_attempts:

max_connect_attempts
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) The maximum number of unsuccessful connection attempts that will be made before
  giving up. If the parameter is not specified, 1 connection attempt will be made.
  
  
.. _envoy_api_msg_config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1:

config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1
--------------------------------------------------------

`[config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1 proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/network/tcp_proxy/v2/tcp_proxy.proto#L67>`_

TCP Proxy filter configuration using V1 format, until Envoy gets the
ability to match source/destination at the listener level (called
:ref:`filter chain match <envoy_api_msg_listener.FilterChainMatch>`).

.. code-block:: json

  {
    "routes": []
  }

.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1.routes:

routes
  (:ref:`config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1.TCPRoute <envoy_api_msg_config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1.TCPRoute>`, *REQUIRED*) The route table for the filter. All filter instances must have a route
  table, even if it is empty.
  
  
.. _envoy_api_msg_config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1.TCPRoute:

config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1.TCPRoute
-----------------------------------------------------------------

`[config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1.TCPRoute proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/network/tcp_proxy/v2/tcp_proxy.proto#L75>`_

A TCP proxy route consists of a set of optional L4 criteria and the
name of a cluster. If a downstream connection matches all the
specified criteria, the cluster in the route is used for the
corresponding upstream connection. Routes are tried in the order
specified until a match is found. If no match is found, the connection
is closed. A route with no criteria is valid and always produces a
match.

.. code-block:: json

  {
    "cluster": "...",
    "destination_ip_list": [],
    "destination_ports": "...",
    "source_ip_list": [],
    "source_ports": "..."
  }

.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1.TCPRoute.cluster:

cluster
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The cluster to connect to when a the downstream network connection
  matches the specified criteria.
  
  
.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1.TCPRoute.destination_ip_list:

destination_ip_list
  (:ref:`core.CidrRange <envoy_api_msg_core.CidrRange>`) An optional list of IP address subnets in the form
  “ip_address/xx”. The criteria is satisfied if the destination IP
  address of the downstream connection is contained in at least one of
  the specified subnets. If the parameter is not specified or the list
  is empty, the destination IP address is ignored. The destination IP
  address of the downstream connection might be different from the
  addresses on which the proxy is listening if the connection has been
  redirected.
  
  
.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1.TCPRoute.destination_ports:

destination_ports
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An optional string containing a comma-separated list of port numbers
  or ranges. The criteria is satisfied if the destination port of the
  downstream connection is contained in at least one of the specified
  ranges. If the parameter is not specified, the destination port is
  ignored. The destination port address of the downstream connection
  might be different from the port on which the proxy is listening if
  the connection has been redirected.
  
  
.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1.TCPRoute.source_ip_list:

source_ip_list
  (:ref:`core.CidrRange <envoy_api_msg_core.CidrRange>`) An optional list of IP address subnets in the form
  “ip_address/xx”. The criteria is satisfied if the source IP address
  of the downstream connection is contained in at least one of the
  specified subnets. If the parameter is not specified or the list is
  empty, the source IP address is ignored.
  
  
.. _envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.DeprecatedV1.TCPRoute.source_ports:

source_ports
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An optional string containing a comma-separated list of port numbers
  or ranges. The criteria is satisfied if the source port of the
  downstream connection is contained in at least one of the specified
  ranges. If the parameter is not specified, the source port is
  ignored.
  
  



